fix footer logo sticking out

--- a/lms/static/sass/shared/_footer.scss
+++ b/lms/static/sass/shared/_footer.scss
@@ -165,6 +165,7 @@
       @include text-align(right);
 
       a {
+        @include float(right);
         display: inline-block;
 
         &:hover {
